// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[[ RadioGroupInput ]] renders \`RadioGroupInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"customGridClass":"","disabled":false,"inputWidth":"base"} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-20 py-4\\" customgridclass=\\"\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <z-radio-group id=\\"test-input-id\\" class=\\"space-y-5\\">
      <div class=\\"space-y-1 text-sm\\">
        <div class=\\"inline-flex gap-x-2\\">
          <z-radio value=\\"Value 1\\" label=\\"Label 1\\"></z-radio>
          <!---->
        </div>
        <!---->
      </div>
      <div class=\\"space-y-1 text-sm\\">
        <div class=\\"inline-flex gap-x-2\\">
          <z-radio value=\\"Value 2\\" label=\\"Label 2\\"></z-radio>
          <!---->
        </div>
        <!---->
      </div>
    </z-radio-group>
  </div>
</div>"
`;

exports[`[[ RadioGroupInput ]] renders \`RadioGroupInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"customGridClass":"","disabled":false,"inputWidth":"small"} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-16 py-4\\" customgridclass=\\"\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <z-radio-group id=\\"test-input-id\\" class=\\"space-y-5\\">
      <div class=\\"space-y-1 text-sm\\">
        <div class=\\"inline-flex gap-x-2\\">
          <z-radio value=\\"Value 1\\" label=\\"Label 1\\"></z-radio>
          <!---->
        </div>
        <!---->
      </div>
      <div class=\\"space-y-1 text-sm\\">
        <div class=\\"inline-flex gap-x-2\\">
          <z-radio value=\\"Value 2\\" label=\\"Label 2\\"></z-radio>
          <!---->
        </div>
        <!---->
      </div>
    </z-radio-group>
  </div>
</div>"
`;

exports[`[[ RadioGroupInput ]] renders \`RadioGroupInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"customGridClass":"","disabled":false,"inputWidth":"wide"} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-24 py-4\\" customgridclass=\\"\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <z-radio-group id=\\"test-input-id\\" class=\\"space-y-5\\">
      <div class=\\"space-y-1 text-sm\\">
        <div class=\\"inline-flex gap-x-2\\">
          <z-radio value=\\"Value 1\\" label=\\"Label 1\\"></z-radio>
          <!---->
        </div>
        <!---->
      </div>
      <div class=\\"space-y-1 text-sm\\">
        <div class=\\"inline-flex gap-x-2\\">
          <z-radio value=\\"Value 2\\" label=\\"Label 2\\"></z-radio>
          <!---->
        </div>
        <!---->
      </div>
    </z-radio-group>
  </div>
</div>"
`;

exports[`[[ RadioGroupInput ]] renders \`RadioGroupInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"customGridClass":"","disabled":false,"inputWidth":"x-small"} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-12 py-4\\" customgridclass=\\"\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <z-radio-group id=\\"test-input-id\\" class=\\"space-y-5\\">
      <div class=\\"space-y-1 text-sm\\">
        <div class=\\"inline-flex gap-x-2\\">
          <z-radio value=\\"Value 1\\" label=\\"Label 1\\"></z-radio>
          <!---->
        </div>
        <!---->
      </div>
      <div class=\\"space-y-1 text-sm\\">
        <div class=\\"inline-flex gap-x-2\\">
          <z-radio value=\\"Value 2\\" label=\\"Label 2\\"></z-radio>
          <!---->
        </div>
        <!---->
      </div>
    </z-radio-group>
  </div>
</div>"
`;

exports[`[[ RadioGroupInput ]] renders \`RadioGroupInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"customGridClass":"","disabled":false,"inputWidth":"xx-small"} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-8 py-4\\" customgridclass=\\"\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <z-radio-group id=\\"test-input-id\\" class=\\"space-y-5\\">
      <div class=\\"space-y-1 text-sm\\">
        <div class=\\"inline-flex gap-x-2\\">
          <z-radio value=\\"Value 1\\" label=\\"Label 1\\"></z-radio>
          <!---->
        </div>
        <!---->
      </div>
      <div class=\\"space-y-1 text-sm\\">
        <div class=\\"inline-flex gap-x-2\\">
          <z-radio value=\\"Value 2\\" label=\\"Label 2\\"></z-radio>
          <!---->
        </div>
        <!---->
      </div>
    </z-radio-group>
  </div>
</div>"
`;

exports[`[[ RadioGroupInput ]] renders \`RadioGroupInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"customGridClass":"","disabled":false,"inputWidth":null} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-fr-16 py-4\\" customgridclass=\\"\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <z-radio-group id=\\"test-input-id\\" class=\\"space-y-5\\">
      <div class=\\"space-y-1 text-sm\\">
        <div class=\\"inline-flex gap-x-2\\">
          <z-radio value=\\"Value 1\\" label=\\"Label 1\\"></z-radio>
          <!---->
        </div>
        <!---->
      </div>
      <div class=\\"space-y-1 text-sm\\">
        <div class=\\"inline-flex gap-x-2\\">
          <z-radio value=\\"Value 2\\" label=\\"Label 2\\"></z-radio>
          <!---->
        </div>
        <!---->
      </div>
    </z-radio-group>
  </div>
</div>"
`;

exports[`[[ RadioGroupInput ]] renders \`RadioGroupInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"customGridClass":"","disabled":false} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-16 py-4\\" customgridclass=\\"\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <z-radio-group id=\\"test-input-id\\" class=\\"space-y-5\\">
      <div class=\\"space-y-1 text-sm\\">
        <div class=\\"inline-flex gap-x-2\\">
          <z-radio value=\\"Value 1\\" label=\\"Label 1\\"></z-radio>
          <!---->
        </div>
        <!---->
      </div>
      <div class=\\"space-y-1 text-sm\\">
        <div class=\\"inline-flex gap-x-2\\">
          <z-radio value=\\"Value 2\\" label=\\"Label 2\\"></z-radio>
          <!---->
        </div>
        <!---->
      </div>
    </z-radio-group>
  </div>
</div>"
`;

exports[`[[ RadioGroupInput ]] renders \`RadioGroupInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"customGridClass":"","disabled":true,"inputWidth":"base"} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-20 py-4\\" customgridclass=\\"\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <z-radio-group id=\\"test-input-id\\" disabled=\\"true\\" class=\\"space-y-5\\">
      <div class=\\"space-y-1 text-sm\\">
        <div class=\\"inline-flex gap-x-2\\">
          <z-radio value=\\"Value 1\\" label=\\"Label 1\\"></z-radio>
          <!---->
        </div>
        <!---->
      </div>
      <div class=\\"space-y-1 text-sm\\">
        <div class=\\"inline-flex gap-x-2\\">
          <z-radio value=\\"Value 2\\" label=\\"Label 2\\"></z-radio>
          <!---->
        </div>
        <!---->
      </div>
    </z-radio-group>
  </div>
</div>"
`;

exports[`[[ RadioGroupInput ]] renders \`RadioGroupInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"customGridClass":"","disabled":true,"inputWidth":"small"} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-16 py-4\\" customgridclass=\\"\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <z-radio-group id=\\"test-input-id\\" disabled=\\"true\\" class=\\"space-y-5\\">
      <div class=\\"space-y-1 text-sm\\">
        <div class=\\"inline-flex gap-x-2\\">
          <z-radio value=\\"Value 1\\" label=\\"Label 1\\"></z-radio>
          <!---->
        </div>
        <!---->
      </div>
      <div class=\\"space-y-1 text-sm\\">
        <div class=\\"inline-flex gap-x-2\\">
          <z-radio value=\\"Value 2\\" label=\\"Label 2\\"></z-radio>
          <!---->
        </div>
        <!---->
      </div>
    </z-radio-group>
  </div>
</div>"
`;

exports[`[[ RadioGroupInput ]] renders \`RadioGroupInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"customGridClass":"","disabled":true,"inputWidth":"wide"} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-24 py-4\\" customgridclass=\\"\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <z-radio-group id=\\"test-input-id\\" disabled=\\"true\\" class=\\"space-y-5\\">
      <div class=\\"space-y-1 text-sm\\">
        <div class=\\"inline-flex gap-x-2\\">
          <z-radio value=\\"Value 1\\" label=\\"Label 1\\"></z-radio>
          <!---->
        </div>
        <!---->
      </div>
      <div class=\\"space-y-1 text-sm\\">
        <div class=\\"inline-flex gap-x-2\\">
          <z-radio value=\\"Value 2\\" label=\\"Label 2\\"></z-radio>
          <!---->
        </div>
        <!---->
      </div>
    </z-radio-group>
  </div>
</div>"
`;

exports[`[[ RadioGroupInput ]] renders \`RadioGroupInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"customGridClass":"","disabled":true,"inputWidth":"x-small"} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-12 py-4\\" customgridclass=\\"\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <z-radio-group id=\\"test-input-id\\" disabled=\\"true\\" class=\\"space-y-5\\">
      <div class=\\"space-y-1 text-sm\\">
        <div class=\\"inline-flex gap-x-2\\">
          <z-radio value=\\"Value 1\\" label=\\"Label 1\\"></z-radio>
          <!---->
        </div>
        <!---->
      </div>
      <div class=\\"space-y-1 text-sm\\">
        <div class=\\"inline-flex gap-x-2\\">
          <z-radio value=\\"Value 2\\" label=\\"Label 2\\"></z-radio>
          <!---->
        </div>
        <!---->
      </div>
    </z-radio-group>
  </div>
</div>"
`;

exports[`[[ RadioGroupInput ]] renders \`RadioGroupInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"customGridClass":"","disabled":true,"inputWidth":"xx-small"} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-8 py-4\\" customgridclass=\\"\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <z-radio-group id=\\"test-input-id\\" disabled=\\"true\\" class=\\"space-y-5\\">
      <div class=\\"space-y-1 text-sm\\">
        <div class=\\"inline-flex gap-x-2\\">
          <z-radio value=\\"Value 1\\" label=\\"Label 1\\"></z-radio>
          <!---->
        </div>
        <!---->
      </div>
      <div class=\\"space-y-1 text-sm\\">
        <div class=\\"inline-flex gap-x-2\\">
          <z-radio value=\\"Value 2\\" label=\\"Label 2\\"></z-radio>
          <!---->
        </div>
        <!---->
      </div>
    </z-radio-group>
  </div>
</div>"
`;

exports[`[[ RadioGroupInput ]] renders \`RadioGroupInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"customGridClass":"","disabled":true,"inputWidth":null} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-fr-16 py-4\\" customgridclass=\\"\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <z-radio-group id=\\"test-input-id\\" disabled=\\"true\\" class=\\"space-y-5\\">
      <div class=\\"space-y-1 text-sm\\">
        <div class=\\"inline-flex gap-x-2\\">
          <z-radio value=\\"Value 1\\" label=\\"Label 1\\"></z-radio>
          <!---->
        </div>
        <!---->
      </div>
      <div class=\\"space-y-1 text-sm\\">
        <div class=\\"inline-flex gap-x-2\\">
          <z-radio value=\\"Value 2\\" label=\\"Label 2\\"></z-radio>
          <!---->
        </div>
        <!---->
      </div>
    </z-radio-group>
  </div>
</div>"
`;

exports[`[[ RadioGroupInput ]] renders \`RadioGroupInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"customGridClass":"","disabled":true} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-16 py-4\\" customgridclass=\\"\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <z-radio-group id=\\"test-input-id\\" disabled=\\"true\\" class=\\"space-y-5\\">
      <div class=\\"space-y-1 text-sm\\">
        <div class=\\"inline-flex gap-x-2\\">
          <z-radio value=\\"Value 1\\" label=\\"Label 1\\"></z-radio>
          <!---->
        </div>
        <!---->
      </div>
      <div class=\\"space-y-1 text-sm\\">
        <div class=\\"inline-flex gap-x-2\\">
          <z-radio value=\\"Value 2\\" label=\\"Label 2\\"></z-radio>
          <!---->
        </div>
        <!---->
      </div>
    </z-radio-group>
  </div>
</div>"
`;

exports[`[[ RadioGroupInput ]] renders \`RadioGroupInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"customGridClass":"grid-cols-1 md:grid-cols-4","disabled":false,"inputWidth":"base"} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-20 py-4\\" customgridclass=\\"grid-cols-1 md:grid-cols-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <z-radio-group id=\\"test-input-id\\" class=\\"space-y-5\\">
      <div class=\\"space-y-1 text-sm\\">
        <div class=\\"inline-flex gap-x-2\\">
          <z-radio value=\\"Value 1\\" label=\\"Label 1\\"></z-radio>
          <!---->
        </div>
        <!---->
      </div>
      <div class=\\"space-y-1 text-sm\\">
        <div class=\\"inline-flex gap-x-2\\">
          <z-radio value=\\"Value 2\\" label=\\"Label 2\\"></z-radio>
          <!---->
        </div>
        <!---->
      </div>
    </z-radio-group>
  </div>
</div>"
`;

exports[`[[ RadioGroupInput ]] renders \`RadioGroupInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"customGridClass":"grid-cols-1 md:grid-cols-4","disabled":false,"inputWidth":"small"} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-16 py-4\\" customgridclass=\\"grid-cols-1 md:grid-cols-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <z-radio-group id=\\"test-input-id\\" class=\\"space-y-5\\">
      <div class=\\"space-y-1 text-sm\\">
        <div class=\\"inline-flex gap-x-2\\">
          <z-radio value=\\"Value 1\\" label=\\"Label 1\\"></z-radio>
          <!---->
        </div>
        <!---->
      </div>
      <div class=\\"space-y-1 text-sm\\">
        <div class=\\"inline-flex gap-x-2\\">
          <z-radio value=\\"Value 2\\" label=\\"Label 2\\"></z-radio>
          <!---->
        </div>
        <!---->
      </div>
    </z-radio-group>
  </div>
</div>"
`;

exports[`[[ RadioGroupInput ]] renders \`RadioGroupInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"customGridClass":"grid-cols-1 md:grid-cols-4","disabled":false,"inputWidth":"wide"} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-24 py-4\\" customgridclass=\\"grid-cols-1 md:grid-cols-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <z-radio-group id=\\"test-input-id\\" class=\\"space-y-5\\">
      <div class=\\"space-y-1 text-sm\\">
        <div class=\\"inline-flex gap-x-2\\">
          <z-radio value=\\"Value 1\\" label=\\"Label 1\\"></z-radio>
          <!---->
        </div>
        <!---->
      </div>
      <div class=\\"space-y-1 text-sm\\">
        <div class=\\"inline-flex gap-x-2\\">
          <z-radio value=\\"Value 2\\" label=\\"Label 2\\"></z-radio>
          <!---->
        </div>
        <!---->
      </div>
    </z-radio-group>
  </div>
</div>"
`;

exports[`[[ RadioGroupInput ]] renders \`RadioGroupInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"customGridClass":"grid-cols-1 md:grid-cols-4","disabled":false,"inputWidth":"x-small"} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-12 py-4\\" customgridclass=\\"grid-cols-1 md:grid-cols-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <z-radio-group id=\\"test-input-id\\" class=\\"space-y-5\\">
      <div class=\\"space-y-1 text-sm\\">
        <div class=\\"inline-flex gap-x-2\\">
          <z-radio value=\\"Value 1\\" label=\\"Label 1\\"></z-radio>
          <!---->
        </div>
        <!---->
      </div>
      <div class=\\"space-y-1 text-sm\\">
        <div class=\\"inline-flex gap-x-2\\">
          <z-radio value=\\"Value 2\\" label=\\"Label 2\\"></z-radio>
          <!---->
        </div>
        <!---->
      </div>
    </z-radio-group>
  </div>
</div>"
`;

exports[`[[ RadioGroupInput ]] renders \`RadioGroupInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"customGridClass":"grid-cols-1 md:grid-cols-4","disabled":false,"inputWidth":"xx-small"} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-8 py-4\\" customgridclass=\\"grid-cols-1 md:grid-cols-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <z-radio-group id=\\"test-input-id\\" class=\\"space-y-5\\">
      <div class=\\"space-y-1 text-sm\\">
        <div class=\\"inline-flex gap-x-2\\">
          <z-radio value=\\"Value 1\\" label=\\"Label 1\\"></z-radio>
          <!---->
        </div>
        <!---->
      </div>
      <div class=\\"space-y-1 text-sm\\">
        <div class=\\"inline-flex gap-x-2\\">
          <z-radio value=\\"Value 2\\" label=\\"Label 2\\"></z-radio>
          <!---->
        </div>
        <!---->
      </div>
    </z-radio-group>
  </div>
</div>"
`;

exports[`[[ RadioGroupInput ]] renders \`RadioGroupInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"customGridClass":"grid-cols-1 md:grid-cols-4","disabled":false,"inputWidth":null} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-fr-16 py-4\\" customgridclass=\\"grid-cols-1 md:grid-cols-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <z-radio-group id=\\"test-input-id\\" class=\\"space-y-5\\">
      <div class=\\"space-y-1 text-sm\\">
        <div class=\\"inline-flex gap-x-2\\">
          <z-radio value=\\"Value 1\\" label=\\"Label 1\\"></z-radio>
          <!---->
        </div>
        <!---->
      </div>
      <div class=\\"space-y-1 text-sm\\">
        <div class=\\"inline-flex gap-x-2\\">
          <z-radio value=\\"Value 2\\" label=\\"Label 2\\"></z-radio>
          <!---->
        </div>
        <!---->
      </div>
    </z-radio-group>
  </div>
</div>"
`;

exports[`[[ RadioGroupInput ]] renders \`RadioGroupInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"customGridClass":"grid-cols-1 md:grid-cols-4","disabled":false} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-16 py-4\\" customgridclass=\\"grid-cols-1 md:grid-cols-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <z-radio-group id=\\"test-input-id\\" class=\\"space-y-5\\">
      <div class=\\"space-y-1 text-sm\\">
        <div class=\\"inline-flex gap-x-2\\">
          <z-radio value=\\"Value 1\\" label=\\"Label 1\\"></z-radio>
          <!---->
        </div>
        <!---->
      </div>
      <div class=\\"space-y-1 text-sm\\">
        <div class=\\"inline-flex gap-x-2\\">
          <z-radio value=\\"Value 2\\" label=\\"Label 2\\"></z-radio>
          <!---->
        </div>
        <!---->
      </div>
    </z-radio-group>
  </div>
</div>"
`;

exports[`[[ RadioGroupInput ]] renders \`RadioGroupInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"customGridClass":"grid-cols-1 md:grid-cols-4","disabled":true,"inputWidth":"base"} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-20 py-4\\" customgridclass=\\"grid-cols-1 md:grid-cols-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <z-radio-group id=\\"test-input-id\\" disabled=\\"true\\" class=\\"space-y-5\\">
      <div class=\\"space-y-1 text-sm\\">
        <div class=\\"inline-flex gap-x-2\\">
          <z-radio value=\\"Value 1\\" label=\\"Label 1\\"></z-radio>
          <!---->
        </div>
        <!---->
      </div>
      <div class=\\"space-y-1 text-sm\\">
        <div class=\\"inline-flex gap-x-2\\">
          <z-radio value=\\"Value 2\\" label=\\"Label 2\\"></z-radio>
          <!---->
        </div>
        <!---->
      </div>
    </z-radio-group>
  </div>
</div>"
`;

exports[`[[ RadioGroupInput ]] renders \`RadioGroupInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"customGridClass":"grid-cols-1 md:grid-cols-4","disabled":true,"inputWidth":"small"} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-16 py-4\\" customgridclass=\\"grid-cols-1 md:grid-cols-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <z-radio-group id=\\"test-input-id\\" disabled=\\"true\\" class=\\"space-y-5\\">
      <div class=\\"space-y-1 text-sm\\">
        <div class=\\"inline-flex gap-x-2\\">
          <z-radio value=\\"Value 1\\" label=\\"Label 1\\"></z-radio>
          <!---->
        </div>
        <!---->
      </div>
      <div class=\\"space-y-1 text-sm\\">
        <div class=\\"inline-flex gap-x-2\\">
          <z-radio value=\\"Value 2\\" label=\\"Label 2\\"></z-radio>
          <!---->
        </div>
        <!---->
      </div>
    </z-radio-group>
  </div>
</div>"
`;

exports[`[[ RadioGroupInput ]] renders \`RadioGroupInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"customGridClass":"grid-cols-1 md:grid-cols-4","disabled":true,"inputWidth":"wide"} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-24 py-4\\" customgridclass=\\"grid-cols-1 md:grid-cols-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <z-radio-group id=\\"test-input-id\\" disabled=\\"true\\" class=\\"space-y-5\\">
      <div class=\\"space-y-1 text-sm\\">
        <div class=\\"inline-flex gap-x-2\\">
          <z-radio value=\\"Value 1\\" label=\\"Label 1\\"></z-radio>
          <!---->
        </div>
        <!---->
      </div>
      <div class=\\"space-y-1 text-sm\\">
        <div class=\\"inline-flex gap-x-2\\">
          <z-radio value=\\"Value 2\\" label=\\"Label 2\\"></z-radio>
          <!---->
        </div>
        <!---->
      </div>
    </z-radio-group>
  </div>
</div>"
`;

exports[`[[ RadioGroupInput ]] renders \`RadioGroupInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"customGridClass":"grid-cols-1 md:grid-cols-4","disabled":true,"inputWidth":"x-small"} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-12 py-4\\" customgridclass=\\"grid-cols-1 md:grid-cols-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <z-radio-group id=\\"test-input-id\\" disabled=\\"true\\" class=\\"space-y-5\\">
      <div class=\\"space-y-1 text-sm\\">
        <div class=\\"inline-flex gap-x-2\\">
          <z-radio value=\\"Value 1\\" label=\\"Label 1\\"></z-radio>
          <!---->
        </div>
        <!---->
      </div>
      <div class=\\"space-y-1 text-sm\\">
        <div class=\\"inline-flex gap-x-2\\">
          <z-radio value=\\"Value 2\\" label=\\"Label 2\\"></z-radio>
          <!---->
        </div>
        <!---->
      </div>
    </z-radio-group>
  </div>
</div>"
`;

exports[`[[ RadioGroupInput ]] renders \`RadioGroupInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"customGridClass":"grid-cols-1 md:grid-cols-4","disabled":true,"inputWidth":"xx-small"} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-8 py-4\\" customgridclass=\\"grid-cols-1 md:grid-cols-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <z-radio-group id=\\"test-input-id\\" disabled=\\"true\\" class=\\"space-y-5\\">
      <div class=\\"space-y-1 text-sm\\">
        <div class=\\"inline-flex gap-x-2\\">
          <z-radio value=\\"Value 1\\" label=\\"Label 1\\"></z-radio>
          <!---->
        </div>
        <!---->
      </div>
      <div class=\\"space-y-1 text-sm\\">
        <div class=\\"inline-flex gap-x-2\\">
          <z-radio value=\\"Value 2\\" label=\\"Label 2\\"></z-radio>
          <!---->
        </div>
        <!---->
      </div>
    </z-radio-group>
  </div>
</div>"
`;

exports[`[[ RadioGroupInput ]] renders \`RadioGroupInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"customGridClass":"grid-cols-1 md:grid-cols-4","disabled":true,"inputWidth":null} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-fr-16 py-4\\" customgridclass=\\"grid-cols-1 md:grid-cols-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <z-radio-group id=\\"test-input-id\\" disabled=\\"true\\" class=\\"space-y-5\\">
      <div class=\\"space-y-1 text-sm\\">
        <div class=\\"inline-flex gap-x-2\\">
          <z-radio value=\\"Value 1\\" label=\\"Label 1\\"></z-radio>
          <!---->
        </div>
        <!---->
      </div>
      <div class=\\"space-y-1 text-sm\\">
        <div class=\\"inline-flex gap-x-2\\">
          <z-radio value=\\"Value 2\\" label=\\"Label 2\\"></z-radio>
          <!---->
        </div>
        <!---->
      </div>
    </z-radio-group>
  </div>
</div>"
`;

exports[`[[ RadioGroupInput ]] renders \`RadioGroupInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"customGridClass":"grid-cols-1 md:grid-cols-4","disabled":true} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-16 py-4\\" customgridclass=\\"grid-cols-1 md:grid-cols-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <z-radio-group id=\\"test-input-id\\" disabled=\\"true\\" class=\\"space-y-5\\">
      <div class=\\"space-y-1 text-sm\\">
        <div class=\\"inline-flex gap-x-2\\">
          <z-radio value=\\"Value 1\\" label=\\"Label 1\\"></z-radio>
          <!---->
        </div>
        <!---->
      </div>
      <div class=\\"space-y-1 text-sm\\">
        <div class=\\"inline-flex gap-x-2\\">
          <z-radio value=\\"Value 2\\" label=\\"Label 2\\"></z-radio>
          <!---->
        </div>
        <!---->
      </div>
    </z-radio-group>
  </div>
</div>"
`;

exports[`[[ RadioGroupInput ]] renders \`RadioGroupInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"customGridClass":null,"disabled":false,"inputWidth":"base"} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-20 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <z-radio-group id=\\"test-input-id\\" class=\\"space-y-5\\">
      <div class=\\"space-y-1 text-sm\\">
        <div class=\\"inline-flex gap-x-2\\">
          <z-radio value=\\"Value 1\\" label=\\"Label 1\\"></z-radio>
          <!---->
        </div>
        <!---->
      </div>
      <div class=\\"space-y-1 text-sm\\">
        <div class=\\"inline-flex gap-x-2\\">
          <z-radio value=\\"Value 2\\" label=\\"Label 2\\"></z-radio>
          <!---->
        </div>
        <!---->
      </div>
    </z-radio-group>
  </div>
</div>"
`;

exports[`[[ RadioGroupInput ]] renders \`RadioGroupInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"customGridClass":null,"disabled":false,"inputWidth":"small"} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-16 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <z-radio-group id=\\"test-input-id\\" class=\\"space-y-5\\">
      <div class=\\"space-y-1 text-sm\\">
        <div class=\\"inline-flex gap-x-2\\">
          <z-radio value=\\"Value 1\\" label=\\"Label 1\\"></z-radio>
          <!---->
        </div>
        <!---->
      </div>
      <div class=\\"space-y-1 text-sm\\">
        <div class=\\"inline-flex gap-x-2\\">
          <z-radio value=\\"Value 2\\" label=\\"Label 2\\"></z-radio>
          <!---->
        </div>
        <!---->
      </div>
    </z-radio-group>
  </div>
</div>"
`;

exports[`[[ RadioGroupInput ]] renders \`RadioGroupInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"customGridClass":null,"disabled":false,"inputWidth":"wide"} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-24 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <z-radio-group id=\\"test-input-id\\" class=\\"space-y-5\\">
      <div class=\\"space-y-1 text-sm\\">
        <div class=\\"inline-flex gap-x-2\\">
          <z-radio value=\\"Value 1\\" label=\\"Label 1\\"></z-radio>
          <!---->
        </div>
        <!---->
      </div>
      <div class=\\"space-y-1 text-sm\\">
        <div class=\\"inline-flex gap-x-2\\">
          <z-radio value=\\"Value 2\\" label=\\"Label 2\\"></z-radio>
          <!---->
        </div>
        <!---->
      </div>
    </z-radio-group>
  </div>
</div>"
`;

exports[`[[ RadioGroupInput ]] renders \`RadioGroupInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"customGridClass":null,"disabled":false,"inputWidth":"x-small"} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-12 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <z-radio-group id=\\"test-input-id\\" class=\\"space-y-5\\">
      <div class=\\"space-y-1 text-sm\\">
        <div class=\\"inline-flex gap-x-2\\">
          <z-radio value=\\"Value 1\\" label=\\"Label 1\\"></z-radio>
          <!---->
        </div>
        <!---->
      </div>
      <div class=\\"space-y-1 text-sm\\">
        <div class=\\"inline-flex gap-x-2\\">
          <z-radio value=\\"Value 2\\" label=\\"Label 2\\"></z-radio>
          <!---->
        </div>
        <!---->
      </div>
    </z-radio-group>
  </div>
</div>"
`;

exports[`[[ RadioGroupInput ]] renders \`RadioGroupInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"customGridClass":null,"disabled":false,"inputWidth":"xx-small"} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-8 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <z-radio-group id=\\"test-input-id\\" class=\\"space-y-5\\">
      <div class=\\"space-y-1 text-sm\\">
        <div class=\\"inline-flex gap-x-2\\">
          <z-radio value=\\"Value 1\\" label=\\"Label 1\\"></z-radio>
          <!---->
        </div>
        <!---->
      </div>
      <div class=\\"space-y-1 text-sm\\">
        <div class=\\"inline-flex gap-x-2\\">
          <z-radio value=\\"Value 2\\" label=\\"Label 2\\"></z-radio>
          <!---->
        </div>
        <!---->
      </div>
    </z-radio-group>
  </div>
</div>"
`;

exports[`[[ RadioGroupInput ]] renders \`RadioGroupInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"customGridClass":null,"disabled":false,"inputWidth":null} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-fr-16 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <z-radio-group id=\\"test-input-id\\" class=\\"space-y-5\\">
      <div class=\\"space-y-1 text-sm\\">
        <div class=\\"inline-flex gap-x-2\\">
          <z-radio value=\\"Value 1\\" label=\\"Label 1\\"></z-radio>
          <!---->
        </div>
        <!---->
      </div>
      <div class=\\"space-y-1 text-sm\\">
        <div class=\\"inline-flex gap-x-2\\">
          <z-radio value=\\"Value 2\\" label=\\"Label 2\\"></z-radio>
          <!---->
        </div>
        <!---->
      </div>
    </z-radio-group>
  </div>
</div>"
`;

exports[`[[ RadioGroupInput ]] renders \`RadioGroupInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"customGridClass":null,"disabled":false} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-16 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <z-radio-group id=\\"test-input-id\\" class=\\"space-y-5\\">
      <div class=\\"space-y-1 text-sm\\">
        <div class=\\"inline-flex gap-x-2\\">
          <z-radio value=\\"Value 1\\" label=\\"Label 1\\"></z-radio>
          <!---->
        </div>
        <!---->
      </div>
      <div class=\\"space-y-1 text-sm\\">
        <div class=\\"inline-flex gap-x-2\\">
          <z-radio value=\\"Value 2\\" label=\\"Label 2\\"></z-radio>
          <!---->
        </div>
        <!---->
      </div>
    </z-radio-group>
  </div>
</div>"
`;

exports[`[[ RadioGroupInput ]] renders \`RadioGroupInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"customGridClass":null,"disabled":true,"inputWidth":"base"} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-20 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <z-radio-group id=\\"test-input-id\\" disabled=\\"true\\" class=\\"space-y-5\\">
      <div class=\\"space-y-1 text-sm\\">
        <div class=\\"inline-flex gap-x-2\\">
          <z-radio value=\\"Value 1\\" label=\\"Label 1\\"></z-radio>
          <!---->
        </div>
        <!---->
      </div>
      <div class=\\"space-y-1 text-sm\\">
        <div class=\\"inline-flex gap-x-2\\">
          <z-radio value=\\"Value 2\\" label=\\"Label 2\\"></z-radio>
          <!---->
        </div>
        <!---->
      </div>
    </z-radio-group>
  </div>
</div>"
`;

exports[`[[ RadioGroupInput ]] renders \`RadioGroupInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"customGridClass":null,"disabled":true,"inputWidth":"small"} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-16 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <z-radio-group id=\\"test-input-id\\" disabled=\\"true\\" class=\\"space-y-5\\">
      <div class=\\"space-y-1 text-sm\\">
        <div class=\\"inline-flex gap-x-2\\">
          <z-radio value=\\"Value 1\\" label=\\"Label 1\\"></z-radio>
          <!---->
        </div>
        <!---->
      </div>
      <div class=\\"space-y-1 text-sm\\">
        <div class=\\"inline-flex gap-x-2\\">
          <z-radio value=\\"Value 2\\" label=\\"Label 2\\"></z-radio>
          <!---->
        </div>
        <!---->
      </div>
    </z-radio-group>
  </div>
</div>"
`;

exports[`[[ RadioGroupInput ]] renders \`RadioGroupInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"customGridClass":null,"disabled":true,"inputWidth":"wide"} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-24 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <z-radio-group id=\\"test-input-id\\" disabled=\\"true\\" class=\\"space-y-5\\">
      <div class=\\"space-y-1 text-sm\\">
        <div class=\\"inline-flex gap-x-2\\">
          <z-radio value=\\"Value 1\\" label=\\"Label 1\\"></z-radio>
          <!---->
        </div>
        <!---->
      </div>
      <div class=\\"space-y-1 text-sm\\">
        <div class=\\"inline-flex gap-x-2\\">
          <z-radio value=\\"Value 2\\" label=\\"Label 2\\"></z-radio>
          <!---->
        </div>
        <!---->
      </div>
    </z-radio-group>
  </div>
</div>"
`;

exports[`[[ RadioGroupInput ]] renders \`RadioGroupInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"customGridClass":null,"disabled":true,"inputWidth":"x-small"} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-12 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <z-radio-group id=\\"test-input-id\\" disabled=\\"true\\" class=\\"space-y-5\\">
      <div class=\\"space-y-1 text-sm\\">
        <div class=\\"inline-flex gap-x-2\\">
          <z-radio value=\\"Value 1\\" label=\\"Label 1\\"></z-radio>
          <!---->
        </div>
        <!---->
      </div>
      <div class=\\"space-y-1 text-sm\\">
        <div class=\\"inline-flex gap-x-2\\">
          <z-radio value=\\"Value 2\\" label=\\"Label 2\\"></z-radio>
          <!---->
        </div>
        <!---->
      </div>
    </z-radio-group>
  </div>
</div>"
`;

exports[`[[ RadioGroupInput ]] renders \`RadioGroupInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"customGridClass":null,"disabled":true,"inputWidth":"xx-small"} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-8 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <z-radio-group id=\\"test-input-id\\" disabled=\\"true\\" class=\\"space-y-5\\">
      <div class=\\"space-y-1 text-sm\\">
        <div class=\\"inline-flex gap-x-2\\">
          <z-radio value=\\"Value 1\\" label=\\"Label 1\\"></z-radio>
          <!---->
        </div>
        <!---->
      </div>
      <div class=\\"space-y-1 text-sm\\">
        <div class=\\"inline-flex gap-x-2\\">
          <z-radio value=\\"Value 2\\" label=\\"Label 2\\"></z-radio>
          <!---->
        </div>
        <!---->
      </div>
    </z-radio-group>
  </div>
</div>"
`;

exports[`[[ RadioGroupInput ]] renders \`RadioGroupInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"customGridClass":null,"disabled":true,"inputWidth":null} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-fr-16 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <z-radio-group id=\\"test-input-id\\" disabled=\\"true\\" class=\\"space-y-5\\">
      <div class=\\"space-y-1 text-sm\\">
        <div class=\\"inline-flex gap-x-2\\">
          <z-radio value=\\"Value 1\\" label=\\"Label 1\\"></z-radio>
          <!---->
        </div>
        <!---->
      </div>
      <div class=\\"space-y-1 text-sm\\">
        <div class=\\"inline-flex gap-x-2\\">
          <z-radio value=\\"Value 2\\" label=\\"Label 2\\"></z-radio>
          <!---->
        </div>
        <!---->
      </div>
    </z-radio-group>
  </div>
</div>"
`;

exports[`[[ RadioGroupInput ]] renders \`RadioGroupInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"customGridClass":null,"disabled":true} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-16 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <z-radio-group id=\\"test-input-id\\" disabled=\\"true\\" class=\\"space-y-5\\">
      <div class=\\"space-y-1 text-sm\\">
        <div class=\\"inline-flex gap-x-2\\">
          <z-radio value=\\"Value 1\\" label=\\"Label 1\\"></z-radio>
          <!---->
        </div>
        <!---->
      </div>
      <div class=\\"space-y-1 text-sm\\">
        <div class=\\"inline-flex gap-x-2\\">
          <z-radio value=\\"Value 2\\" label=\\"Label 2\\"></z-radio>
          <!---->
        </div>
        <!---->
      </div>
    </z-radio-group>
  </div>
</div>"
`;

exports[`[[ RadioGroupInput ]] renders \`RadioGroupInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"disabled":false,"inputWidth":"base"} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-20 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <z-radio-group id=\\"test-input-id\\" class=\\"space-y-5\\">
      <div class=\\"space-y-1 text-sm\\">
        <div class=\\"inline-flex gap-x-2\\">
          <z-radio value=\\"Value 1\\" label=\\"Label 1\\"></z-radio>
          <!---->
        </div>
        <!---->
      </div>
      <div class=\\"space-y-1 text-sm\\">
        <div class=\\"inline-flex gap-x-2\\">
          <z-radio value=\\"Value 2\\" label=\\"Label 2\\"></z-radio>
          <!---->
        </div>
        <!---->
      </div>
    </z-radio-group>
  </div>
</div>"
`;

exports[`[[ RadioGroupInput ]] renders \`RadioGroupInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"disabled":false,"inputWidth":"small"} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-16 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <z-radio-group id=\\"test-input-id\\" class=\\"space-y-5\\">
      <div class=\\"space-y-1 text-sm\\">
        <div class=\\"inline-flex gap-x-2\\">
          <z-radio value=\\"Value 1\\" label=\\"Label 1\\"></z-radio>
          <!---->
        </div>
        <!---->
      </div>
      <div class=\\"space-y-1 text-sm\\">
        <div class=\\"inline-flex gap-x-2\\">
          <z-radio value=\\"Value 2\\" label=\\"Label 2\\"></z-radio>
          <!---->
        </div>
        <!---->
      </div>
    </z-radio-group>
  </div>
</div>"
`;

exports[`[[ RadioGroupInput ]] renders \`RadioGroupInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"disabled":false,"inputWidth":"wide"} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-24 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <z-radio-group id=\\"test-input-id\\" class=\\"space-y-5\\">
      <div class=\\"space-y-1 text-sm\\">
        <div class=\\"inline-flex gap-x-2\\">
          <z-radio value=\\"Value 1\\" label=\\"Label 1\\"></z-radio>
          <!---->
        </div>
        <!---->
      </div>
      <div class=\\"space-y-1 text-sm\\">
        <div class=\\"inline-flex gap-x-2\\">
          <z-radio value=\\"Value 2\\" label=\\"Label 2\\"></z-radio>
          <!---->
        </div>
        <!---->
      </div>
    </z-radio-group>
  </div>
</div>"
`;

exports[`[[ RadioGroupInput ]] renders \`RadioGroupInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"disabled":false,"inputWidth":"x-small"} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-12 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <z-radio-group id=\\"test-input-id\\" class=\\"space-y-5\\">
      <div class=\\"space-y-1 text-sm\\">
        <div class=\\"inline-flex gap-x-2\\">
          <z-radio value=\\"Value 1\\" label=\\"Label 1\\"></z-radio>
          <!---->
        </div>
        <!---->
      </div>
      <div class=\\"space-y-1 text-sm\\">
        <div class=\\"inline-flex gap-x-2\\">
          <z-radio value=\\"Value 2\\" label=\\"Label 2\\"></z-radio>
          <!---->
        </div>
        <!---->
      </div>
    </z-radio-group>
  </div>
</div>"
`;

exports[`[[ RadioGroupInput ]] renders \`RadioGroupInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"disabled":false,"inputWidth":"xx-small"} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-8 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <z-radio-group id=\\"test-input-id\\" class=\\"space-y-5\\">
      <div class=\\"space-y-1 text-sm\\">
        <div class=\\"inline-flex gap-x-2\\">
          <z-radio value=\\"Value 1\\" label=\\"Label 1\\"></z-radio>
          <!---->
        </div>
        <!---->
      </div>
      <div class=\\"space-y-1 text-sm\\">
        <div class=\\"inline-flex gap-x-2\\">
          <z-radio value=\\"Value 2\\" label=\\"Label 2\\"></z-radio>
          <!---->
        </div>
        <!---->
      </div>
    </z-radio-group>
  </div>
</div>"
`;

exports[`[[ RadioGroupInput ]] renders \`RadioGroupInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"disabled":false,"inputWidth":null} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-fr-16 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <z-radio-group id=\\"test-input-id\\" class=\\"space-y-5\\">
      <div class=\\"space-y-1 text-sm\\">
        <div class=\\"inline-flex gap-x-2\\">
          <z-radio value=\\"Value 1\\" label=\\"Label 1\\"></z-radio>
          <!---->
        </div>
        <!---->
      </div>
      <div class=\\"space-y-1 text-sm\\">
        <div class=\\"inline-flex gap-x-2\\">
          <z-radio value=\\"Value 2\\" label=\\"Label 2\\"></z-radio>
          <!---->
        </div>
        <!---->
      </div>
    </z-radio-group>
  </div>
</div>"
`;

exports[`[[ RadioGroupInput ]] renders \`RadioGroupInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"disabled":false} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-16 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <z-radio-group id=\\"test-input-id\\" class=\\"space-y-5\\">
      <div class=\\"space-y-1 text-sm\\">
        <div class=\\"inline-flex gap-x-2\\">
          <z-radio value=\\"Value 1\\" label=\\"Label 1\\"></z-radio>
          <!---->
        </div>
        <!---->
      </div>
      <div class=\\"space-y-1 text-sm\\">
        <div class=\\"inline-flex gap-x-2\\">
          <z-radio value=\\"Value 2\\" label=\\"Label 2\\"></z-radio>
          <!---->
        </div>
        <!---->
      </div>
    </z-radio-group>
  </div>
</div>"
`;

exports[`[[ RadioGroupInput ]] renders \`RadioGroupInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"disabled":true,"inputWidth":"base"} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-20 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <z-radio-group id=\\"test-input-id\\" disabled=\\"true\\" class=\\"space-y-5\\">
      <div class=\\"space-y-1 text-sm\\">
        <div class=\\"inline-flex gap-x-2\\">
          <z-radio value=\\"Value 1\\" label=\\"Label 1\\"></z-radio>
          <!---->
        </div>
        <!---->
      </div>
      <div class=\\"space-y-1 text-sm\\">
        <div class=\\"inline-flex gap-x-2\\">
          <z-radio value=\\"Value 2\\" label=\\"Label 2\\"></z-radio>
          <!---->
        </div>
        <!---->
      </div>
    </z-radio-group>
  </div>
</div>"
`;

exports[`[[ RadioGroupInput ]] renders \`RadioGroupInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"disabled":true,"inputWidth":"small"} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-16 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <z-radio-group id=\\"test-input-id\\" disabled=\\"true\\" class=\\"space-y-5\\">
      <div class=\\"space-y-1 text-sm\\">
        <div class=\\"inline-flex gap-x-2\\">
          <z-radio value=\\"Value 1\\" label=\\"Label 1\\"></z-radio>
          <!---->
        </div>
        <!---->
      </div>
      <div class=\\"space-y-1 text-sm\\">
        <div class=\\"inline-flex gap-x-2\\">
          <z-radio value=\\"Value 2\\" label=\\"Label 2\\"></z-radio>
          <!---->
        </div>
        <!---->
      </div>
    </z-radio-group>
  </div>
</div>"
`;

exports[`[[ RadioGroupInput ]] renders \`RadioGroupInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"disabled":true,"inputWidth":"wide"} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-24 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <z-radio-group id=\\"test-input-id\\" disabled=\\"true\\" class=\\"space-y-5\\">
      <div class=\\"space-y-1 text-sm\\">
        <div class=\\"inline-flex gap-x-2\\">
          <z-radio value=\\"Value 1\\" label=\\"Label 1\\"></z-radio>
          <!---->
        </div>
        <!---->
      </div>
      <div class=\\"space-y-1 text-sm\\">
        <div class=\\"inline-flex gap-x-2\\">
          <z-radio value=\\"Value 2\\" label=\\"Label 2\\"></z-radio>
          <!---->
        </div>
        <!---->
      </div>
    </z-radio-group>
  </div>
</div>"
`;

exports[`[[ RadioGroupInput ]] renders \`RadioGroupInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"disabled":true,"inputWidth":"x-small"} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-12 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <z-radio-group id=\\"test-input-id\\" disabled=\\"true\\" class=\\"space-y-5\\">
      <div class=\\"space-y-1 text-sm\\">
        <div class=\\"inline-flex gap-x-2\\">
          <z-radio value=\\"Value 1\\" label=\\"Label 1\\"></z-radio>
          <!---->
        </div>
        <!---->
      </div>
      <div class=\\"space-y-1 text-sm\\">
        <div class=\\"inline-flex gap-x-2\\">
          <z-radio value=\\"Value 2\\" label=\\"Label 2\\"></z-radio>
          <!---->
        </div>
        <!---->
      </div>
    </z-radio-group>
  </div>
</div>"
`;

exports[`[[ RadioGroupInput ]] renders \`RadioGroupInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"disabled":true,"inputWidth":"xx-small"} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-8 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <z-radio-group id=\\"test-input-id\\" disabled=\\"true\\" class=\\"space-y-5\\">
      <div class=\\"space-y-1 text-sm\\">
        <div class=\\"inline-flex gap-x-2\\">
          <z-radio value=\\"Value 1\\" label=\\"Label 1\\"></z-radio>
          <!---->
        </div>
        <!---->
      </div>
      <div class=\\"space-y-1 text-sm\\">
        <div class=\\"inline-flex gap-x-2\\">
          <z-radio value=\\"Value 2\\" label=\\"Label 2\\"></z-radio>
          <!---->
        </div>
        <!---->
      </div>
    </z-radio-group>
  </div>
</div>"
`;

exports[`[[ RadioGroupInput ]] renders \`RadioGroupInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"disabled":true,"inputWidth":null} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-fr-16 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <z-radio-group id=\\"test-input-id\\" disabled=\\"true\\" class=\\"space-y-5\\">
      <div class=\\"space-y-1 text-sm\\">
        <div class=\\"inline-flex gap-x-2\\">
          <z-radio value=\\"Value 1\\" label=\\"Label 1\\"></z-radio>
          <!---->
        </div>
        <!---->
      </div>
      <div class=\\"space-y-1 text-sm\\">
        <div class=\\"inline-flex gap-x-2\\">
          <z-radio value=\\"Value 2\\" label=\\"Label 2\\"></z-radio>
          <!---->
        </div>
        <!---->
      </div>
    </z-radio-group>
  </div>
</div>"
`;

exports[`[[ RadioGroupInput ]] renders \`RadioGroupInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"disabled":true} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-16 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <z-radio-group id=\\"test-input-id\\" disabled=\\"true\\" class=\\"space-y-5\\">
      <div class=\\"space-y-1 text-sm\\">
        <div class=\\"inline-flex gap-x-2\\">
          <z-radio value=\\"Value 1\\" label=\\"Label 1\\"></z-radio>
          <!---->
        </div>
        <!---->
      </div>
      <div class=\\"space-y-1 text-sm\\">
        <div class=\\"inline-flex gap-x-2\\">
          <z-radio value=\\"Value 2\\" label=\\"Label 2\\"></z-radio>
          <!---->
        </div>
        <!---->
      </div>
    </z-radio-group>
  </div>
</div>"
`;
